<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="app_name">Something</string>
    <string name="bookmark_title">Bookmarks</string>
    <string name="menu_forum_pin">Open This Forum on Launch</string>
    <string name="menu_forum_pin_bookmarks">Open Bookmarks on Launch</string>
    <string name="menu_forum_star">Favorite</string>
    <string name="menu_thread_bookmark">Bookmark Thread</string>
    <string name="thread_view_loading">Loading…</string>
    <string name="bookmarking_thread_started">Bookmarking…</string>
    <string name="bookmarking_thread_started_removing">Removing Bookmark…</string>
    <string name="bookmarking_thread_success_add">Bookmark Added</string>
    <string name="bookmarking_thread_success_remove">Bookmark Removed</string>
    <string name="bookmarking_thread_failure">Bookmark Failed!</string>
    <string name="login_activity_title">Login</string>
    <string name="login_title">Login</string>
    <string name="login_user_hint">Username…</string>
    <string name="login_pass_hint">Password…</string>
    <string name="login_button_text">Login</string>
    <string name="login_success">Logged In!</string>
    <string name="login_failed">Login Failed</string>
    <string name="page_select_title">Select Page</string><string name="page_select_first">First</string><string name="page_select_last">Last</string><string name="page_select_submit">Select</string>
    <string name="mark_last_read_success">Marked Position</string>
    <string name="mark_last_read_failure">Failed to Mark!</string>
    <string name="mark_last_read_started">Marking…</string>
    <string name="threadview_navbar_prev">Previous Page</string>
    <string name="threadview_navbar_next">Next Page</string>
    <string name="threadview_navbar_page">Page 9999/9999</string>
    <string name="menu_forum_home">Open Favorite Forum</string>
    <string name="page_divider_text">Page 9999/9999</string>
    <string name="loading_item_message">Loading Page</string>
    <string name="menu_copy_url">Copy URL</string>
    <string name="menu_share_link">Share Link…</string>
    <string name="menu_open_link">Open Link…</string>
    <string name="menu_save_image">Save Image</string>
    <string name="url_copied">Copied!</string>
    <string name="loading_failed">Network Error</string>
    <string name="private_messages">Private Messages</string>
    <string name="menu_private_messages">Private Messages</string>
    <string name="menu_thread_menu">Thread Menu</string>
    <string name="menu_thread_unbookmark">Unbookmark</string>
    <string name="forum_title">Forums</string>
    <string name="pull_bottom_nextpage">Pull for next page…</string>
    <string name="pull_bottom_release_nexpage">Release for next page…</string>
    <string name="post_reply">POST</string>
    <string name="reply_submit">Post</string>
    <string name="reply_preview">Preview</string>
    <string name="reply_activity">Reply</string>
    <string name="pm_activity">Private Message</string>
    <string name="pm_reply">Reply</string>
    <string name="login_started_title">Logging In</string>
    <string name="login_started_message">Please wait…</string>
    <string name="preference_dialog_title">Preferences</string>
    <string name="preference_theme">Theme</string>
    <string name="menu_preferences">Preferences</string>
    <string name="preference_apply">Apply</string>
    <string name="menu_logout">Logout</string>
    <string name="posting_failed_title">Posting Failed</string>
    <string name="posting_failed_message">Failed to send post.</string>
    <string name="menu_refresh">Refresh</string>
    <string name="back_title">Back</string>
    <string name="menu_thread_reply">Reply</string>
    <string name="menu_thread_reply_closed">Thread Closed</string>
    <string name="post_loading_failed">Loading Failed</string>
    <string name="post_loading_failed_message">Failed to load reply page.</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="preview_loading">Loading Preview</string>
    <string name="post_loading">Loading Reply</string>
    <string name="please_wait">Please wait…</string>
    <string name="posting_title">Posting…</string>
    <string name="sending_title">Sending…</string>
    <string name="posting_message">Please wait.</string>
    <string name="reply_confirm_title_reply">Reply</string>
    <string name="reply_confirm_message_reply">Posting to:</string>
    <string name="reply_confirm_title_edit">Editing Post</string>
    <string name="reply_confirm_message_edit">Editing post in:</string>
    <string name="reply_confirm_title_quote">Quoting Post</string>
    <string name="reply_confirm_message_quote">Quoting post in:</string>
    <string name="reply_confirm_title_pm">Private Message</string>
    <string name="reply_confirm_message_pm">User:</string>
    <string name="confirm_reply">Confirm</string>
    <string name="confirm_quote">Confirm</string>
    <string name="confirm_edit">Confirm</string>
    <string name="confirm_pm">Send</string>
    <string name="reply_sent_pm">Message Sent</string>
    <string name="reply_title_hint">Subject</string>
    <string name="reply_username_hint">Username</string>
    <string name="menu_newpm">New Message</string>
    <string name="reply_title_reply">New Reply</string>
    <string name="reply_title_pm">Private Message</string>
    <string name="reply_title_edit">Edit Post</string>
    <string name="button_ok">OK</string>
    <string name="menu_delete">Delete</string>
    <string name="pm_deleted">Message Deleted</string>
    <string name="bbcode">BBCode</string>
    <string name="bbcode_emotes">Emotes</string>
    <string name="bbcode_bold">Bold</string>
    <string name="bbcode_italics">Italics</string>
    <string name="bbcode_underline">Underline</string>
    <string name="bbcode_strikeout">Strikeout</string>
    <string name="bbcode_imagetag">Image Tag</string>
    <string name="bbcode_timagetag">TIMG Tag</string>
    <string name="bbcode_pasteurl">Insert URL</string>
    <string name="bbcode_video">Insert Video</string>
    <string name="bbcode_quote">Quote Block</string>
    <string name="bbcode_spoiler">Spoiler Block</string>
    <string name="bbcode_codeblock">Code Block</string>
    <string name="post_more_title">More…</string>
    <string name="share_url_title">Share Link</string>
    <string name="link_copied">Copied Link</string>
    <string name="marked_unread">Marked Unread</string>
    <string name="preference_image_enabled">Enabled</string>
    <string name="preference_image_wifi">WiFi Only</string>
    <string name="preference_image_disabled">Disabled</string>
    <string name="preference_images">Images</string>
    <string name="preference_avatars">Avatars</string>
    <string name="preferences_postperpage">Posts Per Page</string>
    <string name="preference_font_example">Example</string>
    <string name="preference_font_small">Small</string>
    <string name="preference_font_normal">Normal</string>
    <string name="preference_font_large">Large</string>
    <string name="preference_font_title">Font Size</string>
    <string name="reply_draft_title_edit">Saved Edit</string>
    <string name="reply_draft_title_reply">Saved Draft</string>
    <string name="reply_draft_title_pm">Saved Draft</string>
    <string name="pull_bottom_release_refresh">Release to refresh…</string>
    <string name="no_permission_download">Something does not have permission to download things.</string>
    <string name="thread_killed_by">%1$d - Killed By: %2$s</string>
    <string name="thread_op">%1$d - OP: %2$s</string>
</resources>
