<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_forum_home"
        android:title="@string/menu_forum_home"
        android:icon="@drawable/ic_menu_home"
        android:showAsAction="always"/>
    <item
        android:id="@+id/menu_forum_star"
        android:checkable="true"
        android:title="@string/menu_forum_star"
        android:showAsAction="never"/>
    <item
        android:id="@+id/menu_private_messages"
        android:title="@string/menu_private_messages"
        android:actionLayout="@layout/pm_notification"
        android:icon="@drawable/ic_menu_mail"
        android:showAsAction="always"/>
    <item
        android:id="@+id/menu_forum_pin"
        android:checkable="true"
        android:title="@string/menu_forum_pin"
        android:showAsAction="never"/>
    <item
        android:id="@+id/menu_preferences"
        android:title="@string/menu_preferences"
        android:showAsAction="never"/>
    <item
        android:id="@+id/menu_logout"
        android:title="@string/menu_logout"
        android:showAsAction="never"/>
</menu>