<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/page_number_picker_container"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/page_select_first"
            android:id="@+id/page_select_first"
            android:padding="20dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:layout_gravity="center_vertical" />

        <NumberPicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/page_number_picker"
            android:orientation="vertical" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/page_select_last"
            android:id="@+id/page_select_last"
            android:padding="20dp"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/page_select_submit"
        android:id="@+id/page_select_button"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:layout_marginTop="4dp"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>